--- a/apps/api-gateway/gqlgen.yml
+++ b/apps/api-gateway/gqlgen.yml
@@ -1,6 +1,6 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - graph/*.graphqls
+  - schemas/*.graphql
 
 # Where should the generated server code go?
 exec:
@@ -66,7 +66,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "graphql-api-gateway/graph/model"
+#  - "api-gateway/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
